# splunk-mcp-server2

python/: README.md  pyproject.toml  server.py
